# songbird

./: .cirrus.yml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  blargg_tests.md  build-wasm.sh  songbird.code-workspace  tests.md
core/: Cargo.toml
core/src/: alu.rs  bus.rs  cartridge.rs  cpu.rs  debug.rs  io.rs  lib.rs  mmu.rs  opcodes.rs  ppu.rs  system.rs  utils.rs  wram.rs
core/src/agbd/: debugger.rs  mod.rs
core/src/audio/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  mod.rs
core/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  rtc.rs
core/src/cpu/: clock.rs  mod.rs  opcodes.rs  timer.rs
core/src/debug/: mod.rs
core/src/ppu/: bkgd.rs  clock.rs  map.rs  mod.rs  mode.rs  palette.rs  sprite.rs  tile.rs
core/tests/: cpu_tests.rs  rom_tests.rs
gtk/: Cargo.toml
gtk/src/: main.rs  menubar.rs  ui.rs
gtk/src/shaders/: ascii-color.frag  base.vert
gui/: Cargo.toml  debug_coredump.sh
gui/src/: main.rs  menu.rs  ui.rs
gui/src/shaders/: ascii-1bit.frag  ascii-color.frag  base.vert  crt.frag  greenscale.frag  none.frag
imgui/: Cargo.toml
imgui/lib/imgui_file_explorer/: Cargo.toml
imgui/lib/imgui_file_explorer/src/: lib.rs
imgui/src/: main.rs
sdl/: Cargo.toml  debug_coredump.sh  setup_win.sh
sdl/src/: main.rs
src/: main.rs
term/: Cargo.toml
term/src/: main.rs
tests/: cpu_tests.rs  rom_tests.rs  tests.rs
utils/: game-genie.py  header-inspect.py
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: agba.js  agba_wasm.js  agba_wasm_bg.wasm  index.html  index.js  run.sh  style.css
