[package]
name = "songbird_gtk"
version = "0.1.0"
description = "GTK frontend for the Songbird Game Boy emulator"
repository = "https://github.com/aquova/songbird"
license = "GPL-3.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
songbird_core = { path = "../core" }
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
