[package]
name = "songbird_gui"
version = "0.1.0"
description = "GUI wrapper for the Songbird Game Boy emulator"
repository = "https://github.com/aquova/songbird"
license = "GPL-3.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
songbird_core = { path = "../core" }
glium = "0.27.0"
# glutin = "0.24.1"
# imgui = "0.4.0"
