[package]
name = "songbird_gui"
version = "0.1.0"
description = "GUI wrapper for the Songbird Game Boy emulator"
repository = "https://github.com/aquova/songbird"
license = "GPL-3.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
songbird_core = { path = "../core" }
glium = "0.27.0"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
