[package]
name = "songbird_sdl"
description = "A Game Boy Emulator"
version = "0.1.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
songbird_core = { path = "../core" }
coredump = "^0.1.1"
sdl2 = "^0.32.2"

# Requires the cargo-bundle crate to generate .app
[package.metadata.bundle]
name = "songbird"
identifier = "io.github.aquova.songbird"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
copyright = "Copyright (c) Austin Bricker 2019-2020. All rights reserved."
category = "Games"
osx_frameworks = ["SDL2"]
