[package]
name = "songbird_sdl"
version = "0.1.0"
description = "SDL2 frontend for the Songbird Game Boy emulator"
repository = "https://github.com/aquova/songbird"
license = "GPL-3.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[features]
debug = ["coredump"]

[dependencies]
songbird_core = { path = "../core" }
coredump = { version = "0.1.1", optional = true }

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]

