[package]
name = "songbird_term"
version = "0.1.0"
description = "Terminal frontend for the Songbird Game Boy emulator"
repository = "https://github.com/aquova/songbird"
license = "GPL-3.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
songbird_core = { path = "../core" }
termion = "1.5.5"
