[package]
name = "songbird_wasm"
version = "0.1.0"
authors = ["aquova <abrick912@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
songbird_core = { path = "../core" }

[dependencies.web-sys]
version = "0.3.39"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
]

[lib]
crate-type = ["cdylib"]
